ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2/input.ts.stderr
error[1128]: Declaration or statement expected
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2/input.ts:7:1
  |
7 | )
  | ^

